added congatec code and updated makefiles

--- a/i2c_terminal_report/Makefile
+++ b/i2c_terminal_report/Makefile
@@ -2,8 +2,8 @@ program_NAME := i2c_terminal_report
 program_C_SRCS := $(wildcard *.c)
 program_C_OBJS := ${program_C_SRCS:.c=.o} $(wildcard ../i2c_driver/*.o)
 program_OBJS := $(program_C_OBJS)
-program_INCLUDE_DIRS := ../../cgoslib ../i2c_driver
-program_LIBRARY_DIRS := ../../cgoslib/Lx
+program_INCLUDE_DIRS := ../congatec_cgoslib ../i2c_driver
+program_LIBRARY_DIRS := ../congatec_cgoslib/Lx
 program_LIBRARIES := cgos
 
 CPPFLAGS += $(foreach includedir,$(program_INCLUDE_DIRS),-I$(includedir))
@@ -12,11 +12,12 @@ LDFLAGS += $(foreach library,$(program_LIBRARIES),-l$(library))
 
 
 CPPFLAGS += -Wall -Werror
-LDFLAGS += -Wl,-rpath=/root/git/internship/source/cgoslib/Lx/
+###LDFLAGS += -Wl,-rpath=/root/git/internship/source/cgoslib/Lx/
+LDFLAGS += -Wl,-rpath=../congatec_cgoslib/Lx/
 
 
-##set debug symbols flag for gdb
-CPPFLAGS += -g
+####set debug symbols flag for gdb
+##CPPFLAGS += -g
 
 ##link real time functions
 CPPFLAGS += -lrt
@@ -25,19 +26,17 @@ CPPFLAGS += -lrt
 CPPFLAGS += -lpthread
 
 
-.PHONY: all clean distclean head resethard q quick
+.PHONY: all clean distclean head resethard update
 
 all: $(program_NAME)
-
-q: quick
-
-quick: resethard clean all
 
 pull:
 	git pull
 
 resethard:
 	git reset HEAD --hard
+
+update:	clean pull resethard all
 
 $(program_NAME): $(program_OBJS)
 	$(LINK.cc) $(program_OBJS) -o $(program_NAME)
